src/objects/HostInfomation__c.object
<CustomObject>
    <description>Tenableから取り込んだデータのうち指摘サーバ（ホスト）に関する情報を管理</description>
    <fields>
        <fullName>FQDN__c</fullName>
        <description>調査対象サーバのFully Qualified Domain Name。
（ドメイン名＋ホスト名）</description>
        <inlineHelpText>調査対象サーバのFully Qualified Domain Name。
（ドメイン名＋ホスト名）</inlineHelpText>
        <label>FQDN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <description>調査対象サーバのIP</description>
        <inlineHelpText>調査対象サーバのIP</inlineHelpText>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAC_Address__c</fullName>
        <description>調査対象サーバのMACアドレス</description>
        <inlineHelpText>調査対象サーバのMACアドレス</inlineHelpText>
        <label>MAC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetBios__c</fullName>
        <description>調査対象サーバのNetBios名。</description>
        <inlineHelpText>調査対象サーバのNetBios名。</inlineHelpText>
        <label>NetBios</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <description>調査対象サーバのOS名</description>
        <inlineHelpText>調査対象サーバのOS名</inlineHelpText>
        <label>OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Type__c</fullName>
        <description>対象サーバの利用目的の設定値</description>
        <inlineHelpText>対象サーバの利用目的の設定値</inlineHelpText>
        <label>System Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ホスト情報</label>
    <nameField>
        <label>host</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>